--- a/src/locales/ru/index.json
+++ b/src/locales/ru/index.json
@@ -742,9 +742,10 @@
                 "type": "Тип запроса",
                 "priority": "Приоритет",
                 "status": "Статус",
-                "description": "Описание проекта",
+                "description": "Описание запроса",
                 "submit": "Создать запрос",
-                "required-error": "Обязательно для заполнения"
+                "required-error": "Обязательно для заполнения",
+                "form-title": "Название проектного запроса"
             },
             "customer": {
                 "title": "Заказчик",
@@ -858,12 +859,12 @@
                 },
                 "main-info": {
                     "industry_sector": "Отрасль",
-                    "project": "Проект",
+                    "organization_project": "Проект",
                     "resource_manager": "Рес. менеджер",
                     "recruiter": "Отв. рекрутер",
                     "type": "Тип запроса",
                     "requirements": "Общее кол-во",
-                    "project_description": "Описание проекта",
+                    "description": "Описание запроса",
                     "customer": "Заказчик"
                 },
                 "duration": "Продолжительность",
