SC-25 Add date to specialist cards

--- a/src/locales/ru/index.json
+++ b/src/locales/ru/index.json
@@ -592,7 +592,8 @@
                 "title_current": "Карточка «{{name}}»",
                 "title_add": "Добавить карточки доступа",
                 "cancel": "Отмена",
-                "submit": "Сохранить"
+                "submit": "Сохранить",
+                "date": "Дата выдачи"
             },
             "sidebar": {
                 "filters": {
