--- a/src/locales/ru/index.json
+++ b/src/locales/ru/index.json
@@ -584,6 +584,11 @@
                 "cancel": "Отмена",
                 "submit": "Сохранить",
                 "date": "Дата выдачи"
+            },
+            "modal-rating": {
+                "title": "Оцените специалиста",
+                "cancel": "Отмена",
+                "submit": "Сохранить"
             }
         },
         "specialists": {
