--- a/src/locales/ru/index.json
+++ b/src/locales/ru/index.json
@@ -268,7 +268,7 @@
                     "title": "Контакты"
                 },
                 "career": {
-                    "title": "Карьеры",
+                    "title": "Карьера",
                     "tooltip": "Текст текст текст"
                 },
                 "projects": {
@@ -696,7 +696,7 @@
                 "empty": "Список запросов пуст",
                 "request-item": {
                     "title": "Название проектного запроса не указано",
-                    "date": "Создан {{date}}",
+                    "date": "Дата начала {{date}}",
                     "status": {
                         "value": {
                             "draft": "Черновик",
