--- a/src/locales/ru/index.json
+++ b/src/locales/ru/index.json
@@ -76,6 +76,7 @@
         "breadcrumbs": {
             "candidates": "Кандидаты",
             "specialists": "Специалисты",
+            "modules": "Модули",
             "organizations": "Организации",
             "requests": "Проектные запросы",
             "projects": "Проекты",
@@ -208,7 +209,7 @@
                     "period": "Период",
                     "industry": "Отрасль",
                     "description": "Описание",
-                    "modules": "Модули"
+                    "module": "Модули"
                 },
                 "empty": {
                     "title": "У организации ещё нет проектов",
@@ -257,10 +258,9 @@
             }
         },
         "organization-projects": {
-            "empty": "Нет проектных запросов",
             "blocks": {
                 "sections": {
-                    "requests": "Проектные запросы",
+                    "modules": "Модули",
                     "main-info":"Основная информация",
                     "cards":"Карточки прав и доступа"
                 },
@@ -642,7 +642,7 @@
                     "requirement-no-name": "Название требования не указано",
                     "success_already": "Кандидат уже был добавлен в проект",
                     "success_done": "Кандидат успешно добавлен в проект",
-                    "empty-list": "Нет достпуных запросов для добавления"
+                    "empty-list": "Нет доступных запросов для добавления"
                 }
             },
             "sidebar": {
@@ -703,6 +703,66 @@
             },
             "sidebar": {
                 "title": "Похожие"
+            }
+        },
+        "modules-list": {
+            "title": "Модули",
+            "empty": "Нет доступных модулей",
+            "module": {
+                "start": "Срок старта",
+                "deadline": "Срок реализации",
+                "description": "Описание",
+                "fun-points": "Функциональных точек",
+                "fun-type": "Тип функциональных точек",
+                "difficulty": "Сложность",
+                "estimate": "Оценка",
+                "estimate-count": "{{count}} специалистов",
+                "estimate-hours": "{{count}} чел/дней"
+            }
+        },
+        "module": {
+            "create": {
+                "title": "Новый модуль",
+                "form-title": "Название модуля",
+                "customer": "Заказчик",
+                "manager": "Ресурсный менеджер",
+                "project": "Проект",
+                "description": "Описание результата",
+                "goals": "Цели",
+                "submit": "Создать запрос",
+                "required-error": "Обязательно для заполнения",
+                "period-form": {
+                    "date_from": "Срок старта",
+                    "date_to": "Срок реализации"
+                }
+            },
+            "blocks": {
+                "sections": {
+                    "main-info": "Основная информация",
+                    "fun-points": "Функциональные точки",
+                    "requests": "Запросы на ресурсы"
+                },
+                "customer": "Заказчик",
+                "manager": "РП",
+                "start": "Срок старта",
+                "deadline": "Срок реализации",
+                "empty": "Список проектных запросов пуст",
+                "actions": {
+                    "edit": "Редактировать",
+                    "delete": "Удалить"
+                }
+            },
+            "edit": {
+                "header": "Редактирование модуля",
+                "save": "Сохранить",
+                "cancel": "Отмена"
+            },
+            "confirm": {
+                "header": "Точно удалить?",
+                "text": "Будет удалён модуль: {{name}}",
+                "empty-name": "Имя модуля не указано",
+                "cancel": "Отмена",
+                "delete": "Удалить"
             }
         },
         "project-request-list": {
@@ -807,15 +867,36 @@
                 "industry_sector": "Отрасль",
                 "customer": "Заказчик",
                 "project": "Проект",
+                "module": "Модуль",
                 "resource_manager": "Ресурсный менеджер",
                 "recruiter": "Ответственный рекрутер",
                 "type": "Тип запроса",
-                "priority": "Приоритет",
-                "status": "Статус",
                 "description": "Описание запроса",
                 "submit": "Создать запрос",
                 "required-error": "Обязательно для заполнения",
-                "form-title": "Название проектного запроса"
+                "form-title": "Название проектного запроса",
+                "period-form": {
+                    "add": "Добавить период приостановки проекта",
+                    "date_from": "Начало проекта",
+                    "date_to": "Окончание проекта"
+                },
+                "tabs": {
+                    "main": "Основное",
+                    "project-timing": "Сроки проекта"
+                },
+                "status": {
+                    "title": "Статус",
+                    "draft": "Черновик",
+                    "done": "Готово",
+                    "in_progress" : "В работе",
+                    "closed": "Закрыт"
+                },
+                "priority": {
+                    "title": "Приоритет",
+                    "30": "Низкий",
+                    "20": "Средний",
+                    "10": "Высокий"
+                }
             },
             "customer": {
                 "title": "Заказчик",
@@ -864,6 +945,17 @@
                         "edit": "Редактировать",
                         "delete": "Удалить"
                     }
+                },
+                "status": {
+                    "draft": "Черновик",
+                    "done": "Готово",
+                    "in_progress" : "В работе",
+                    "closed": "Закрыт"
+                },
+                "priority": {
+                    "30": "Низкий",
+                    "20": "Средний",
+                    "10": "Высокий"
                 },
                 "empty-title": "Название проектного запроса не\u00A0указано",
                 "empty-field": "Не\u00A0указано",
@@ -918,17 +1010,6 @@
                     "title": "Разное",
                     "deadline": "Сроки"
                 },
-                "priority": {
-                    "30": "Низкий",
-                    "20": "Средний",
-                    "10": "Высокий"
-                },
-                "status": {
-                    "draft": "Черновик",
-                    "done": "Готово",
-                    "in_progress" : "В работе",
-                    "closed": "Закрыт"
-                },
                 "main-info": {
                     "industry_sector": "Отрасль",
                     "organization_project": "Проект",
@@ -952,10 +1033,6 @@
                     "empty-name": "Имя запроса не указано",
                     "cancel": "Отмена",
                     "delete": "Удалить"
-                },
-                "tabs": {
-                    "main": "Основное",
-                    "project-timing": "Сроки проекта"
                 },
                 "period-form": {
                     "add": "Добавить период приостановки проекта",
