SC-28 iteration 4 resources fun points

--- a/src/locales/ru/index.json
+++ b/src/locales/ru/index.json
@@ -81,12 +81,32 @@
             "requests": "Проектные запросы",
             "projects": "Проекты",
             "organization-projects": "Проекты",
+            "fun-points": "Функциональные точки",
             "timesheets": "Таймшиты",
             "main-info": "Основная информация",
             "cards": "Карточки прав и доступа",
             "create": "Создать",
             "edit": "Редактировать",
             "requirement": "Требование"
+        },
+        "resources": {
+            "summary": {
+                "0": {
+                    "title": "Специалистов",
+                    "count": "{{count}}"
+                },
+                "1": {
+                    "title": "Трудозатраты",
+                    "count": "{{count}} чел./дней"
+                }
+            },
+            "content": {
+                "header": {
+                    "role": "Должность",
+                    "count": "Кол-во",
+                    "hours": "Часов/чел"
+                }
+            }
         }
     },
     "routes": {
@@ -258,6 +278,7 @@
             }
         },
         "organization-projects": {
+            "sub-header": "Цифровой профиль проекта",
             "blocks": {
                 "sections": {
                     "modules": "Модули",
@@ -266,7 +287,12 @@
                 },
                 "customer": "Заказчик",
                 "manager": "РП",
-                "timeframe": "Сроки проекта"
+                "timeframe": "Таймфрейм",
+                "description": "Описание проекта"
+            },
+            "resources": {
+                "title": "Ресурсный справочник",
+                "action": "Пересчитать"
             }
         },
         "person": {
@@ -332,6 +358,13 @@
                     }
                 },
                 "competencies": {
+                    "experience": {
+                        "invariant": "Опыт не указан",
+                        "invariant_1": "Менее года",
+                        "invariant_3": "1-3 года",
+                        "invariant_5": "3-5 лет",
+                        "invariant_100": "Более 5 лет"
+                    },
                     "controls": {
                         "edit": "Редактировать",
                         "delete": "Удалить"
@@ -740,10 +773,13 @@
                 "sections": {
                     "main-info": "Основная информация",
                     "fun-points": "Функциональные точки",
-                    "requests": "Запросы на ресурсы"
+                    "requests": "Запросы на ресурсы",
+                    "resource-value": "Оценка ресурсов"
                 },
                 "customer": "Заказчик",
                 "manager": "РП",
+                "goals": "Цели",
+                "description": "Описание",
                 "start": "Срок старта",
                 "deadline": "Срок реализации",
                 "empty": "Список проектных запросов пуст",
@@ -751,6 +787,25 @@
                     "edit": "Редактировать",
                     "delete": "Удалить"
                 }
+            },
+            "fun-points": {
+                "empty": "Не добавлено ни одной функциональной точки",
+                "title": "Фунциональные точки",
+                "count": "Количество точек",
+                "type": "Тип",
+                "difficulty": "Сложность",
+                "button": "Сгенерировать оценку"
+            },
+            "modal-regenerate": {
+                "header": "Внимание!",
+                "text": "Конфирм - учти, если ты экспертно там что-то добавлял - все затрется",
+                "cancel": "Отмена",
+                "ok": "Продолжить"
+            },
+            "resource-value": {
+                "title": "Оценка ресурсов",
+                "empty": "Нет актуальной оценки ресурсов",
+                "create-requests": "Создать проектный запрос на ресурсы"
             },
             "edit": {
                 "header": "Редактирование модуля",
@@ -763,6 +818,23 @@
                 "empty-name": "Имя модуля не указано",
                 "cancel": "Отмена",
                 "delete": "Удалить"
+            },
+            "resource-edit": {
+                "title": "Редактирование ресурсов",
+                "header": {
+                    "role": "Должность",
+                    "count": "Кол-во",
+                    "hours": "Часов/чел"
+                },
+                "form": {
+                    "role": {
+                        "placeholder": "Выбрать должность"
+                    },
+                    "buttons": {
+                        "save": "Сохранить",
+                        "cancel": "Отменить"
+                    }
+                }
             }
         },
         "project-request-list": {
@@ -936,7 +1008,14 @@
                     "title-field": "Название требования",
                     "add-request": "Добавить требование",
                     "date-from": "Дата начала",
-                    "date-to": "Дата окончания"
+                    "date-to": "Дата окончания",
+                    "experience": {
+                        "invariant": "Опыт не указан",
+                        "invariant_1": "Менее года",
+                        "invariant_3": "1-3 года",
+                        "invariant_5": "3-5 лет",
+                        "invariant_100": "Более 5 лет"
+                    }
                 }
             },
             "blocks": {
@@ -1072,6 +1151,25 @@
                 },
                 "description": "Описание проекта",
                 "submit": "Создать проект"
+            }
+        },
+        "fun-points": {
+            "empty": "Не добавлено ни одной функциональной точки",
+            "title": "Фунциональные точки",
+            "blocks": {
+                "fun-points": "Фунциональные точки"
+            },
+            "actions": {
+                "delete": "Удалить",
+                "edit": "Редактировать"
+            },
+            "content": {
+                "norma": {
+                    "title": "Норматив трудозатрат",
+                    "value": "{{count}} чел./дня"
+                },
+                "difficulty": "Уровень сложности",
+                "coefficient": "Поправочный коэффециент"
             }
         }
     },
