SC-28 iteration 4 fun points

--- a/src/locales/ru/index.json
+++ b/src/locales/ru/index.json
@@ -1195,6 +1195,12 @@
                     "difficulty": {
                         "label": "Уровень сложности",
                         "placeholder": "Выберите уровень сложности"
+                    },
+                    "labors": {
+                        "title": "Нормативы трудозатрат",
+                        "button_show": "Показать нормативы трудозатрат",
+                        "button_hide": "Скрыть",
+                        "submit": "Сохранить"
                     }
                 }
             }
