SC-28 iteration 4 fun points

--- a/src/locales/ru/index.json
+++ b/src/locales/ru/index.json
@@ -1194,7 +1194,9 @@
                     },
                     "difficulty": {
                         "label": "Уровень сложности",
-                        "placeholder": "Выберите уровень сложности"
+                        "placeholder": "Выберите уровень сложности",
+                        "coefficient": "Коэффициент сложности",
+                        "save": "Сохранить"
                     },
                     "labors": {
                         "title": "Нормативы трудозатрат",
