SC-24 resource plan

--- a/src/locales/ru/index.json
+++ b/src/locales/ru/index.json
@@ -295,7 +295,7 @@
                 "description": "Описание проекта"
             },
             "resources": {
-                "title": "Ресурсный справочник",
+                "title": "Ресурсный план",
                 "action": "Пересчитать"
             }
         },
