SC-25 dashboard and more

--- a/src/locales/ru/index.json
+++ b/src/locales/ru/index.json
@@ -676,6 +676,9 @@
                             "main_make": "Сделать основным",
                             "remove": "Удалить"
                         }
+                    },
+                    "contractor": {
+                        "title": "Организация исполнителя"
                     }
                 },
                 "access": {
